tests/ui/associated-type-bounds/issue-102335-ty.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-102335-ty.rs:2:17
   |
LL |     type A: S<C<i32 = u32> = ()>;
   |                 ^^^^^^^^^ associated type not allowed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0229`.
